# AAS-Holo-Shard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  aas_shard.py  factory.json  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: conf.py  implementation_guide.rst  index.rst  usage.rst
src/aas_holo_shard/: __init__.py
src/aas_holo_shard/aas/: __init__.py  parser.py  shard.py
src/aas_holo_shard/core/: __init__.py  shamir.py
src/aas_holo_shard/storage/: __init__.py  ipfs.py
tests/: conftest.py  test_aas_shard.py  test_optional_modules.py  test_shamir.py
tests/test_vectors/: README.md
